--- a/security_account/views/sale.xml
+++ b/security_account/views/sale.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
     <data>
-        
+
         <!-- Pedidos de venta: reemplazar el boton 'Crear factura' para que solo puedan facturar los que pertenezcan al grupo 'Permitir facturar' -->
         <record id="view_sale_order_allow_invoiced_form" model="ir.ui.view">
             <field name="name">sale.order.allow.invoiced.form</field>
@@ -11,7 +11,7 @@
                 <data>
                     <xpath expr="/form/header/button[@string='Create Invoice']" position="replace">
                         <button name="%(sale.action_view_sale_advance_payment_inv)d" string="Create Invoice"
-                            type="action" states="manual" class="oe_highlight" groups="security_account_extend.group_allowed_invoiced"/>
+                            type="action" states="manual" class="oe_highlight" groups="security_account.group_allowed_invoiced"/>
                     </xpath>
                 </data>
             </field>
